# visibility.rs

./: Cargo.toml
.github/workflows/: CI.yml  future-proof.yml
downstream_crate/: Cargo.toml  lib.rs
src/: lib.rs
